Add public key size to each cert in chain output